[Modified] Home Navbar style

--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "react-custom-scrollbars-2": "^4.3.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.31.2",
+    "react-icons": "^4.4.0",
     "react-mentions": "^4.1.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.2",
