--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,8 @@
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
     "react-custom-scrollbars-2": "^4.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.4.0",
