--- a/front/package.json
+++ b/front/package.json
@@ -17,8 +17,6 @@
     "@types/autosize": "^4.0.0",
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "@types/react-mentions": "^4.1.0",
     "@types/react-router-dom": "^5.1.7",
     "autosize": "^5.0.1",
@@ -26,9 +24,13 @@
     "core-js": "^3.14.0",
     "dayjs": "^1.10.4",
     "gravatar": "^1.8.1",
-    "react": "^17.0.1",
+    "immutability-helper": "^3.1.1",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
     "react-custom-scrollbars-2": "^4.3.0",
-    "react-dom": "^17.0.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.4.0",
     "react-mentions": "^4.1.1",
@@ -47,6 +49,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-beta.4",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.22",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.0",
     "@types/webpack-dev-server": "^4.0.3",
