--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
+    "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
@@ -29,7 +30,8 @@
     "pm2": "^5.2.0",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.4.1",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
